@@ -20,6 +20,7 @@
 
 Исправления (!):
 	! VSFilter - исправлена некорректная обработка изменения шрифта;
+	! WASAPI Renderer - исправлено падение в случае отсутствии IReferenceClock интерфейса;
 	 ... и многое другое.
 
 
